--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/fingerPrintDB
+MONGODB_URI=mongodb+srv://admin-david:david1031@cluster0.e1tmm.mongodb.net/fingerprintDB
 PORT=4000
